--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,29 +4,85 @@
 }
 
 .main {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    /* background-color: rgb(238, 228, 169); */
+    background: #DAE2F8;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #D6A4A4, #DAE2F8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
 
 .game {
-    border: 1px solid red;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     display: flex;
     width: 80%;
     justify-content: center;
     /* align-items: center; */
     flex-wrap: wrap;
+    background-color: transparent;
+    padding: 4rem 2%;
 }
 
 .card {
-    border: 1px solid red;
-    width: 5rem;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    /* width: 20%; */
     margin: 1.5rem;
+    border: transparent
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    /* height: 5rem; */
+    /* background-color: rgb(255, 217, 0); */
+}
+
+.flip-card {
+    width: 150px;
+    height: 150px;
+    perspective: 1000px;
+    background-color: transparent;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    
+  }
+  
+  /* .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  } */
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background: #1FA2FF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  }
+  
+  .flip-card-back {
+    /* background-color: rgb(255, 217, 0); */
+    transform: rotateY(180deg);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5rem;
-}
+
+  }
