--- a/src/css/app.css
+++ b/src/css/app.css
@@ -63,6 +63,8 @@
   /* .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   } */
+
+  .flipped { transform: rotateY(180deg); }
   
   .flip-card-front, .flip-card-back {
     position: absolute;
